--- a/src/views/MVPView.css
+++ b/src/views/MVPView.css
@@ -108,6 +108,7 @@
     align-items: center;
     justify-content: center;
     outline: none;
+    border-radius: 6px;
 }
 
 /* 1. Visit - Primary Action */
